make GC configurable
Signed-off-by: Ludovic Orban <lorban@bitronix.be>