@@ -20,11 +20,11 @@ pipeline {
             ' You can choose from this list: GC_LOGS, SJK_TTOP, OS_PERF_C2C, ASYNC_PROF_CPU, ASYNC_PROF_ALLOC, ASYNC_PROF_LOCK, ASYNC_PROF_CACHE_MISSES, ASYNC_PROF_JFR_CPU, ASYNC_PROF_JFR_CPU_ALLOC, ASYNC_PROF_JFR_CPU_LOCK, ASYNC_PROF_JFR_CPU_WALLCLOCK', name: 'OPTIONAL_MONITORED_ITEMS')
 
         string(defaultValue: 'load-master', description: 'Name of the server machine', name: 'SERVER_NAME')
-        string(defaultValue: '-Xms32G -Xmx32G', description: 'Arguments of the server JVM', name: 'SERVER_JVM_OPTS')
+        string(defaultValue: '-XX:+UseZGC -Xms32G -Xmx32G', description: 'Arguments of the server JVM', name: 'SERVER_JVM_OPTS')
         string(defaultValue: 'load-client-1,load-client-2,load-client-3,load-client-4,load-client-5', description: 'CSV list of names of the loader machines', name: 'LOADER_NAMES')
-        string(defaultValue: '-Xms8G -Xmx8G', description: 'Arguments of the loader JVMs', name: 'LOADER_JVM_OPTS')
+        string(defaultValue: '-XX:+UseZGC -Xms8G -Xmx8G', description: 'Arguments of the loader JVMs', name: 'LOADER_JVM_OPTS')
         string(defaultValue: 'load-sample', description: 'Name of the probe machine', name: 'PROBE_NAME')
-        string(defaultValue: '-Xms8G -Xmx8G', description: 'Arguments of the probe JVM', name: 'PROBE_JVM_OPTS')
+        string(defaultValue: '-XX:+UseZGC -Xms8G -Xmx8G', description: 'Arguments of the probe JVM', name: 'PROBE_JVM_OPTS')
 
         string(defaultValue: '60', description: 'Duration of warmup in seconds', name: 'WARMUP_DURATION')
         string(defaultValue: '180', description: 'Duration of measured run in seconds', name: 'RUN_DURATION')
